# greet_grpc_app

./: .gitignore  WORKSPACE  go.mod
client/: main.go
grpc_server/: BUILD.bazel  greet_server.go  main.go
grpc_server/proto/: greet.proto
